--- a/user/themes/brandguide/scss/components/_header.scss
+++ b/user/themes/brandguide/scss/components/_header.scss
@@ -69,6 +69,7 @@
   top: 0;
   left: 0;
   bottom: 0;
+  z-index: 10;
   width: 300px;
   position: fixed;
   background: $white;
